--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@better-scroll/core": "^2.0.0-beta.2",
     "core-js": "^2.6.5",
+    "mockjs": "^1.0.1-beta3",
     "swiper": "^5.0.4",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
